syntax = "proto3";

package proto;

option go_package = "internal/proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message CreateProductResponse {
    string message = 1;
    Product result = 2;
}